--- a/projects/ngx-tw/src/styles/default.scss
+++ b/projects/ngx-tw/src/styles/default.scss
@@ -47,20 +47,27 @@ h6 {
     padding-right: 16px;
     width: 100%;
   }
+  &.disabled {
+    cursor: not-allowed;
+  }
 }
 
-.tw-dropdown-menu-item:hover {
-  background-color: rgb(208, 208, 208);
+.tw-dropdown-menu-item:not(.disabled):hover {
+  background-color: rgba(241, 241, 241, 0.687);
 }
 
-.tw-dropdown-menu-item:active {
+.tw-dropdown-menu-item:not(.disabled):active {
   background-color: rgb(170, 170, 170);
 }
 
-.tw-dropdown-menu-item[role="menuitemradio"][aria-checked="true"] {
+.tw-dropdown-menu-item:not(
+    .disabled
+  )[role="menuitemradio"][aria-checked="true"] {
   background-color: rgb(225, 225, 225);
 }
-.tw-dropdown-menu-item[role="menuitemcheckbox"][aria-checked="true"] {
+.tw-dropdown-menu-item:not(
+    .disabled
+  )[role="menuitemcheckbox"][aria-checked="true"] {
   background-color: rgb(225, 225, 225);
 }
 
