--- a/projects/ngx-tw/src/lib/autocomplete/autocomplete.component.html
+++ b/projects/ngx-tw/src/lib/autocomplete/autocomplete.component.html
@@ -1,61 +1,58 @@
-<div class="relative w-full">
-  <!-- Selected Items (Chips) -->
-  <div class="flex flex-wrap space-x-2 mb-2">
-    <span
-      *ngFor="let item of selectedItems; let i = index"
-      class="bg-blue-500 text-white px-2 py-1 rounded-full"
-    >
-      {{ getDisplayText(item) }}
-      <button
-        (click)="removeSelectedItem(i)"
-        class="ml-2 text-white font-bold"
-      >&times;</button>
-    </span>
-  </div>
-
-  <!-- Autocomplete Input -->
-  <input
-    type="text"
+<div class="relative w-full max-w-sm">
+  <tw-input-field
     [formControl]="searchControl"
-    class="w-full p-2 border rounded focus:outline-none focus:ring"
-    #input
-    (keydown)="handleKeydown($event)"
+    (focus)="isOpen = filteredSuggestions.length > 0"
+    [iconSuffix]="iconSuffix"
+    [iconSuffixClass]="iconSuffixClass"
+    [iconPrefix]="iconPrefix"
+    [iconPrefixClass]="iconPrefixClass"
+    [twClass]="twClass"
+    [name]="name"
+    [label]="label"
+    [maxLength]="maxLength"
+    [minLength]="minLength"
+    [required]="required"
+    [pattern]="pattern"
+    [placeholder]="placeholder"
+    [inputType]="inputType"
+    [color]="color"
+    [showLabel]="showLabel"
+    [multiline]="multiline"
   />
-
   <!-- Dropdown Suggestions -->
   <ng-template
     cdkConnectedOverlay
     [cdkConnectedOverlayHasBackdrop]="true"
-    [cdkConnectedOverlayLockPosition]="true"
     [cdkConnectedOverlayBackdropClass]="'cdk-overlay-transparent-backdrop'"
-    [cdkConnectedOverlayScrollStrategy]="blockScrollStrategy"
-    [cdkConnectedOverlayOrigin]="elementRef.nativeElement"
+    [cdkConnectedOverlayOrigin]="elementRef.nativeElement.firstElementChild"
     [cdkConnectedOverlayOpen]="isOpen"
     [cdkConnectedOverlayPositions]="positions"
-    [cdkConnectedOverlayMinWidth]="elementRef.nativeElement.offsetWidth"
+    [cdkConnectedOverlayMinWidth]="elementRef.nativeElement.firstElementChild.offsetWidth"
+    [cdkConnectedOverlayScrollStrategy]="blockScrollStrategy"
     (backdropClick)="closeDropdown()"
-    (overlayKeydown)="handleKeydown($event)"
     (detach)="closeDropdown()"
   >
-    <div class="absolute w-full bg-white border rounded shadow-lg">
-      <ul *ngIf="filteredSuggestions.length > 0">
+    <div class="w-full mt-1 bg-white border border-gray-200 rounded-lg shadow-lg max-h-60 overflow-y-auto">
+      @if (filteredSuggestions.length > 0) {
+      <ul>
+        @for (suggestion of filteredSuggestions; track $index) {
         <li
-          *ngFor="let suggestion of filteredSuggestions"
           (click)="selectSuggestion(suggestion)"
-          class="p-2 cursor-pointer hover:bg-blue-500 hover:text-white"
+          class="p-2 tw-option"
         >
           <ng-container *ngIf="optionTemplate; else defaultOption">
             <ng-container *ngTemplateOutlet="optionTemplate; context: { $implicit: suggestion }"></ng-container>
           </ng-container>
           <ng-template #defaultOption>{{ getDisplayText(suggestion) }}</ng-template>
         </li>
+        }
       </ul>
-      <div
-        *ngIf="filteredSuggestions.length === 0"
-        class="p-2 text-gray-500"
-      >
+      }
+      @else{
+      <div class="p-2 text-gray-500">
         No suggestions found.
       </div>
+      }
     </div>
   </ng-template>
 </div>
