--- a/projects/ngx-tw/src/styles/components/_buttons.scss
+++ b/projects/ngx-tw/src/styles/components/_buttons.scss
@@ -87,7 +87,7 @@
   @apply flex items-center shrink-0 justify-center px-4 py-1;
   @apply transition-colors duration-200;
   @apply tracking-wide;
-  @apply w-full gap-x-2;
+  @apply gap-x-2;
   @apply h-9 text-sm;
   @apply shadow-sm border border-gray-200 dark:border-gray-600;
 
