--- a/projects/ngx-tw/src/lib/tab/tab-group/tab-group.component.html
+++ b/projects/ngx-tw/src/lib/tab/tab-group/tab-group.component.html
@@ -1,15 +1,16 @@
 <div class="w-100 flex flex-col">
   <div class="tw-tab mb-4 {{color}}">
-    <tw-tab-item
-      *ngFor="let item of children; let i = index"
-      [label]="item.label"
-      [isSelected]="selectedIndex === i"
-      (selected)="selectedIndex = i; selectionChanged.emit(i); navigate(item.route)"
-    />
+    @for (item of children; track item; let i = $index) {
+      <tw-tab-item
+        [label]="item.label"
+        [isSelected]="selectedIndex === i"
+        (selected)="selectedIndex = i; selectionChanged.emit(i); navigate(item.route)"
+        />
+    }
   </div>
   @if(behavior === 'default'){
-  <ng-container [ngTemplateOutlet]="currentContent"></ng-container>
-  }@else{
-  <router-outlet></router-outlet>
+    <ng-container [ngTemplateOutlet]="currentContent"></ng-container>
+    }@else{
+    <router-outlet></router-outlet>
   }
 </div>
