--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,2 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../../ngx-tw/src/styles/default";
+@use "../../ngx-tw/src/styles/default";
