--- a/projects/ngx-tw/src/lib/select/option/option.component.html
+++ b/projects/ngx-tw/src/lib/select/option/option.component.html
@@ -2,16 +2,17 @@
   #content
   class="content"
   [ngClass]="{'selected-item':  selected && value}"
->
+  >
   <ng-content></ng-content>
 </div>
 
-<span
-  class="indicator"
-  *ngIf="useSelectedIndicator"
-  [ngClass]="{'left-0': indicator === 'left', 'right-0': indicator === 'right', 'flex': selected && indicator && value}"
-  [hidden]="selected === false || !value || !indicator"
->
-  <!-- Heroicon name: solid/check -->
-  <tw-icon [size]="24" svgIcon="hero:check"/>
-</span>
+@if (useSelectedIndicator) {
+  <span
+    class="indicator"
+    [ngClass]="{'left-0': indicator === 'left', 'right-0': indicator === 'right', 'flex': selected && indicator && value}"
+    [hidden]="selected === false || !value || !indicator"
+    >
+    <!-- Heroicon name: solid/check -->
+    <tw-icon [size]="24" svgIcon="hero:check"/>
+  </span>
+}
